# NWS-monitor

./: .app.pid  .gitignore  README.md  nws-monitor.sh  pyproject.toml  requirements.txt
backend/: app.py  audio_streamer.py  nws_data.py  nws_stations.json  radio_controller.py
frontend/: app.js  index.html  style.css
scripts/: capture_audio.py  channel_lifecycle.py  nws_channels.py
